Doing some initial commit cleaning

--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "MSA_DB": "Server=127.0.0.1;Port=5432;Database=MSA_DATA;User Id=postgres;Password=***REMOVED***;"
+    "MSA_DB": "Server=127.0.0.1;Port=5432;Database=MSA_DATA;User Id=postgres;Password=test123;"
   },
   "Logging": {
     "IncludeScopes": false,
