--- a/src/Logic/project.json
+++ b/src/Logic/project.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "NETStandard.Library": "1.6.0",
     "Npgsql.EntityFrameworkCore.PostgreSQL": "1.0.1",
-    "Npgsql.EntityFrameworkCore.PostgreSQL.Design": "1.0.1"
+    "Npgsql.EntityFrameworkCore.PostgreSQL.Design": "1.0.1",
+    "System.Data.SqlClient": "4.1.0"
   },
 
   "frameworks": {
