--- a/src/Logic/project.json
+++ b/src/Logic/project.json
@@ -2,10 +2,10 @@
   "version": "1.0.0-*",
 
   "dependencies": {
+    "Dapper": "1.50.2",
     "NETStandard.Library": "1.6.0",
     "Npgsql.EntityFrameworkCore.PostgreSQL": "1.0.1",
-    "Npgsql.EntityFrameworkCore.PostgreSQL.Design": "1.0.1",
-    "System.Data.SqlClient": "4.1.0"
+    "Npgsql.EntityFrameworkCore.PostgreSQL.Design": "1.0.1"
   },
 
   "frameworks": {
