--- a/src/Web/package.json
+++ b/src/Web/package.json
@@ -18,6 +18,8 @@
     "aspnet-prerendering": "^1.0.6",
     "aspnet-webpack": "^1.0.11",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.3.0",
+    "copy-webpack-plugin": "^3.0.1",
     "css": "^2.2.1",
     "css-loader": "^0.25.0",
     "es6-shim": "^0.35.1",
@@ -26,6 +28,7 @@
     "file-loader": "^0.9.0",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.1",
+    "ng2-charts": "^1.3.0",
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
     "rxjs": "5.0.0-beta.12",
